--- a/printama/src/main/res/layout/activity_choose_printer.xml
+++ b/printama/src/main/res/layout/activity_choose_printer.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ChoosePrinterActivity">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +15,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="20dp"
-            android:text="Choose Printer"
+            android:text="@string/choose_printer"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -34,7 +33,7 @@
             android:layout_height="50dp"
             android:layout_margin="20dp"
             android:gravity="center"
-            android:text="Test"
+            android:text="@string/test"
             android:textColor="@android:color/white"
             android:textSize="14sp" />
 
@@ -46,7 +45,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:gravity="center"
-            android:text="Save"
+            android:text="@string/save"
             android:textColor="@android:color/white"
             android:textSize="14sp" />
 
