--- a/printama/src/main/res/layout/fragment_device_list.xml
+++ b/printama/src/main/res/layout/fragment_device_list.xml
@@ -21,7 +21,7 @@
                 android:gravity="center"
                 android:padding="20dp"
                 android:textColor="@color/colorBlack"
-                android:text="Choose Printer"
+                android:text="@string/choose_printer"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -37,16 +37,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="3">
 
                 <Button
                     android:id="@+id/btn_test_printer"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginEnd="2dp"
                     android:layout_marginRight="2dp"
                     android:gravity="center"
-                    android:text="Test"
+                    android:text="@string/test"
+                    android:layout_weight="1"
                     android:textColor="@android:color/white"
                     android:textSize="14sp" />
 
@@ -56,9 +58,9 @@
                     android:layout_height="50dp"
                     android:layout_marginStart="2dp"
                     android:layout_marginLeft="2dp"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:gravity="center"
-                    android:text="Save"
+                    android:text="@string/save"
                     android:textColor="@android:color/white"
                     android:textSize="14sp" />
 
